# taint-ana

./: .gitignore  CONFIG_GUIDE.md  Cargo.toml  DEREF_TRACKING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  K_PREDECESSOR_DFS.md  LOCKBUD_ANALYSIS.md  README.md  REASSIGNMENT_BUG_FIX.md  STATIC_VARIABLE_FIX.md  USAGE_EXAMPLE.md  rust-toolchain.toml  基于流敏感和污点分析的taint-ana.pptx
src/: callbacks.rs  detect.rs  dfs.rs  main.rs  report.rs  state.rs
src/toys/: TEST_DROP_TRACKING.md  deref_tracking_test.rs  escape_to_global_test.rs  example.rs  reassignment_test.rs  static_variable_test.rs  test_drop_tracking.rs
src/toys/experiment/src/: main.mir  main.rs
src/toys/use_after_free/: Cargo.toml
src/toys/use_after_free/src/: example.rs  lockbud.rs  main.rs
