[package]
name = "taintAna"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taint-ana"
path = "src/main.rs"

[[bin]]
name = "cargo-taint-ana"
path = "src/bin/cargo-taint-ana.rs"

[dependencies]
env_logger = "0.8.2"
log = "0.4.11"


[profile.dev]
incremental = false

[dev-dependencies]
#rustc_middle = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_middle" }
#rustc_data_structures = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_data_structures" }
#rustc_index = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_index" }
#rustc_session = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_session" }
#rustc_driver = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_driver" }
#rustc_hir = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_hir" }
#rustc_interface = { path = "C:/Users/hyqho/Workspace/Rust/analysis/rust/compiler/rustc_interface" }

[package.metadata.rust-analyzer]
rustc_private=true
